--- a/modules/RCTStreamLayerModule/package.json
+++ b/modules/RCTStreamLayerModule/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-streamlayer",
   "version": "0.1.0",
-  "description": "streamlayer sdk",
+  "description": "sdk for react native",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.js",
   "module": "./lib/module/index.js",
@@ -79,8 +79,8 @@
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "react": "18.3.1",
-    "react-native": "0.77.0",
-    "react-native-builder-bob": "^0.32.0",
+    "react-native": "0.77.1",
+    "react-native-builder-bob": "^0.37.0",
     "release-it": "^17.10.0",
     "turbo": "^1.10.7",
     "typescript": "^5.2.2"
@@ -183,8 +183,8 @@
     ]
   },
   "codegenConfig": {
-    "name": "RNRCTStreamLayerModuleSpec",
-    "type": "modules",
+    "name": "RNRCTStreamLayerModuleViewSpec",
+    "type": "components",
     "jsSrcsDir": "src",
     "outputDir": {
       "ios": "ios/generated",
@@ -196,8 +196,8 @@
     "includesGeneratedCode": true
   },
   "create-react-native-library": {
-    "type": "turbo-module",
     "languages": "kotlin-objc",
-    "version": "0.46.0"
+    "type": "fabric-view",
+    "version": "0.48.1"
   }
 }
