--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
     "nativesquare": "file:./nativesquare-0.1.0.tgz",
+    "pretty-format": "^29.7.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
@@ -39,7 +40,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-streamlayer": "file:./react-native-streamlayer-0.2.35.tgz",
+    "react-native-streamlayer": "file:./react-native-streamlayer-0.2.44.tgz",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
